# steamroller

./: .editorconfig  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GapAnalysis.md  LICENSE  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  deploy-website.yml  nightly.yml  publish.yml
benchmarks/: bundle.bench.test.ts  bundle.bench.ts  parse.bench.test.ts  parse.bench.ts  run.ts  treeshake.bench.test.ts  treeshake.bench.ts
benchmarks/fixtures/: large-module.js  medium-module.js  small-module.js
docs/: cli.md  configuration-options.md  index.md  javascript-api.md  migration-from-rollup.md  migration-guide.md  plugin-development.md  typescript-strategy.md
git-hooks/: pre-commit  pre-push  setup.sh
native/: README.md
native/minifier/: Cargo.toml
native/parser/: Cargo.toml
native/parser/src/: lib.rs
native/resolver/: Cargo.toml
scripts/: check-regression.sh
src/: build-api.ts  define-config.ts  index.ts  parse-ast.ts  rollup.ts  sourcemap.ts  types.ts  version.ts  watch-entry.ts
src/analyze/: analyzer.ts  reporter.ts  types.ts
src/ast/: types.ts
src/cli/: config-loader.ts  index.ts  log-filter.ts  main.ts  parse-cli.ts  stdin.ts  terminal.ts
src/codegen/: addons.ts  concatenate.ts  deconflict.ts  generated-code.ts  hash.ts  import-export.ts  (+5 more)
tests/: vi-compat.ts
website/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+355 files in other folders)
