[package]
name = "steamroller-native-parser"
version = "0.1.0"
edition = "2021"
description = "Native Rust parser for steamroller"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO: Add napi and napi-derive for Node.js bindings
# napi = "2"
# napi-derive = "2"
# oxc_parser = "0.x" # or swc_ecma_parser
